--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,12 @@ LOG_LEVEL=DEBUG
 # EMAIL_USER=notifications@example.com
 # EMAIL_PASS=change-me
 # EMAIL_USE_TLS=True
+
+# Backups (development examples)
+DB_BACKUPS_DIR=./backups/db
+MEDIA_BACKUPS_DIR=./backups/media
+DB_BACKUP_CRON=0 2 * * *
+MEDIA_BACKUP_CRON=0 3 * * *
+DB_BACKUP_RETENTION_DAYS=7
+# Use local directory by default; can be remote like user@host:/path
+MEDIA_BACKUP_TARGET=./backups/media
