--- a/deploy/.env.production.example
+++ b/deploy/.env.production.example
@@ -19,3 +19,15 @@ HTTPS_PORT=443
 
 # Monitoring
 GF_SECURITY_ADMIN_PASSWORD=admin
+
+# Backups
+# Directory inside backup container (mapped to volume)
+DB_BACKUPS_DIR=/backups/db
+MEDIA_BACKUPS_DIR=/backups/media
+# Cron schedules (minute hour day month weekday)
+DB_BACKUP_CRON=0 2 * * *
+MEDIA_BACKUP_CRON=0 3 * * *
+# Retention in days for DB backups
+DB_BACKUP_RETENTION_DAYS=7
+# Optional remote media target (e.g., user@host:/path or local path)
+MEDIA_BACKUP_TARGET=/backups/media
