--- a/deploy/docker-compose.production.yml
+++ b/deploy/docker-compose.production.yml
@@ -112,14 +112,6 @@ services:
       - ./monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
       - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards:ro
 
-volumes:
-  postgres_data:
-  redis_data:
-  static_data:
-  media_data:
-  backups_data:
-  grafana_data:
-  prometheus_data:
   backup:
     image: alpine:3.19
     restart: unless-stopped
@@ -129,6 +121,7 @@ volumes:
     environment:
       DB_BACKUPS_DIR: ${DB_BACKUPS_DIR:-/backups/db}
       MEDIA_BACKUPS_DIR: ${MEDIA_BACKUPS_DIR:-/backups/media}
+      DB_BACKUP_RETENTION_DAYS: ${DB_BACKUP_RETENTION_DAYS:-7}
       DB_BACKUP_CRON: ${DB_BACKUP_CRON:-0 2 * * *}
       MEDIA_BACKUP_CRON: ${MEDIA_BACKUP_CRON:-0 3 * * *}
       DATABASE_URL: ${DATABASE_URL}
@@ -137,5 +130,16 @@ volumes:
       - backups_data:/backups
       - media_data:/app/media:ro
       - ./scripts/backup.sh:/usr/local/bin/backup.sh:ro
+      - ./scripts/restore_db.sh:/usr/local/bin/restore_db.sh:ro
+      - ./scripts/restore_media.sh:/usr/local/bin/restore_media.sh:ro
       - ./docker/backup-entrypoint.sh:/usr/local/bin/backup-entrypoint.sh:ro
     command: ["/usr/local/bin/backup-entrypoint.sh"]
+
+volumes:
+  postgres_data:
+  redis_data:
+  static_data:
+  media_data:
+  backups_data:
+  grafana_data:
+  prometheus_data:
