--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 # OS
 .DS_Store
+*.pyc
 
 # IDE
 .vscode/
 .idea/
-
 # Python
 __pycache__/
 *.py[cod]
 *.pyo
 *.pyd
+*.pyc
 
 # Environments
 .venv/
