add security config to boilerplae

--- a/deploy/docker-compose.production.yml
+++ b/deploy/docker-compose.production.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-rail_db}
       POSTGRES_USER: ${POSTGRES_USER:-rail_user}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
+      # Security configurations
+      POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./postgres/postgresql.conf:/etc/postgresql/postgresql.conf:ro
@@ -18,6 +20,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    # Security: No external port exposure
+    networks:
+      - backend
 
   redis:
     image: redis:7-alpine
@@ -31,6 +36,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    # Security: No external port exposure
+    networks:
+      - backend
 
   web:
     build:
@@ -52,12 +60,27 @@ services:
         reservations:
           cpus: '0.5'
           memory: 256M
-    # No public port mapping; behind Nginx reverse proxy
+    # Security: No public port mapping; behind Nginx reverse proxy
     volumes:
       - static_data:/app/static
       - media_data:/app/media
       # Mount entrypoint for easier iteration
       - ./docker/entrypoint.sh:/entrypoint.sh:ro
+    networks:
+      - backend
+    # Security: Run as non-root user
+    user: "1000:1000"
+    # Security: Read-only root filesystem
+    read_only: true
+    tmpfs:
+      - /tmp
+      - /var/tmp
+    # Security: Drop all capabilities
+    cap_drop:
+      - ALL
+    # Security: No new privileges
+    security_opt:
+      - no-new-privileges:true
 
   nginx:
     image: nginx:1.25-alpine
@@ -71,13 +94,27 @@ services:
       - web
     ports:
       - "80:80"
-      # Uncomment when you have SSL certs
-      # - "443:443"
+      - "443:443"  # Enable HTTPS
     volumes:
       - static_data:/var/www/static
       - media_data:/var/www/media
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/sites-available/default:/etc/nginx/conf.d/default.conf:ro
+      # SSL certificates volume
+      - ./ssl:/etc/nginx/ssl:ro
+    networks:
+      - frontend
+      - backend
+    # Security: Run as non-root user
+    user: "101:101"  # nginx user
+    # Security: Drop all capabilities except NET_BIND_SERVICE
+    cap_drop:
+      - ALL
+    cap_add:
+      - NET_BIND_SERVICE
+    # Security: No new privileges
+    security_opt:
+      - no-new-privileges:true
 
   prometheus:
     image: prom/prometheus:latest
@@ -88,10 +125,20 @@ services:
           cpus: '0.5'
           memory: 256M
     ports:
-      - "9090:9090"
+      - "127.0.0.1:9090:9090"  # Bind to localhost only
     volumes:
       - ./monitoring/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus
+    networks:
+      - monitoring
+    # Security: Run as non-root user
+    user: "65534:65534"  # nobody user
+    # Security: Drop all capabilities
+    cap_drop:
+      - ALL
+    # Security: No new privileges
+    security_opt:
+      - no-new-privileges:true
 
   grafana:
     image: grafana/grafana:latest
@@ -103,13 +150,30 @@ services:
           memory: 256M
     environment:
       GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD:-admin}
+      # Security configurations
+      GF_SECURITY_DISABLE_GRAVATAR: "true"
+      GF_SECURITY_COOKIE_SECURE: "true"
+      GF_SECURITY_COOKIE_SAMESITE: "strict"
+      GF_SECURITY_STRICT_TRANSPORT_SECURITY: "true"
+      GF_USERS_ALLOW_SIGN_UP: "false"
+      GF_AUTH_ANONYMOUS_ENABLED: "false"
     ports:
-      - "3000:3000"
+      - "127.0.0.1:3000:3000"  # Bind to localhost only
     volumes:
       - grafana_data:/var/lib/grafana
       - ./monitoring/grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
       - ./monitoring/grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
       - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards:ro
+    networks:
+      - monitoring
+    # Security: Run as non-root user
+    user: "472:472"  # grafana user
+    # Security: Drop all capabilities
+    cap_drop:
+      - ALL
+    # Security: No new privileges
+    security_opt:
+      - no-new-privileges:true
 
   backup:
     image: alpine:3.19
@@ -133,6 +197,16 @@ services:
       - ./scripts/restore_media.sh:/usr/local/bin/restore_media.sh:ro
       - ./docker/backup-entrypoint.sh:/usr/local/bin/backup-entrypoint.sh:ro
     command: ["/usr/local/bin/backup-entrypoint.sh"]
+    networks:
+      - backend
+    # Security: Run as non-root user
+    user: "1000:1000"
+    # Security: Drop all capabilities
+    cap_drop:
+      - ALL
+    # Security: No new privileges
+    security_opt:
+      - no-new-privileges:true
 
 volumes:
   postgres_data:
@@ -142,3 +216,23 @@ volumes:
   backups_data:
   grafana_data:
   prometheus_data:
+
+# Security: Network segmentation
+networks:
+  frontend:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
+  backend:
+    driver: bridge
+    internal: true  # No external access
+    ipam:
+      config:
+        - subnet: 172.21.0.0/24
+  monitoring:
+    driver: bridge
+    internal: true  # No external access
+    ipam:
+      config:
+        - subnet: 172.22.0.0/24
